// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem when no properties are set matches snapshot 1`] = `
<li class="tm-list-item"
    role="menuitem"
    tabindex="0"
>
</li>
`;

exports[`ListItem when properties are set matches snapshot 1`] = `
<li class="tm-list-item"
    role="menuitem"
    tabindex="0"
>
  <p>
    bar
  </p>
</li>
`;
